--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,12 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>The Best Movie According to Muruga </h1>
+
+<h2> My top 3 movies of all time </h2>
+
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+
+<h3> Gilli </h3>
+<p> My favorite movie in Tamil</p>
+<h3> Maina </h3>
+<p> My favorite emotional movie in Tamil </p>
+<h3> Arundhathi </h3>
+<p> My favorite Horror movie in Tamil</p>
